test-suite/tests/fail/ui/states/unsatisfied_ruleset.stderr
error[E0599]: no method named `foo` found for struct `Test<N>` in the current scope
  --> tests/fail/ui/states/unsatisfied_ruleset.rs:18:17
   |
 4 | pub struct Test<#[stated] S>;
   | ---------------------------- method `foo` not found for this struct
...
18 |     Test::new().foo();
   |                 ^^^ method not found in `Test<N>`
   |
   = note: the method was found for
           - `Test<Y>`
